030725 new reddit scrapped

--- a/mental_health_analysis.ipynb
+++ b/mental_health_analysis.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d39e0b29",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
     "        \n",
     "        all_posts = []\n",
     "        # , 'top', 'new'\n",
-    "        sort_types = ['hot']\n",
+    "        sort_types = ['hot', 'top', 'new']\n",
     "\n",
     "\n",
     "        for subreddit_name in tqdm(subreddits, desc=\"Subreddits Progress\"):\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ed3d057b",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Subreddits Progress: 100%|██████████| 4/4 [1:20:33<00:00, 1208.28s/it]\n"
+      "Subreddits Progress: 100%|██████████| 9/9 [6:13:00<00:00, 2486.67s/it]  \n"
      ]
     }
    ],
@@ -220,8 +220,8 @@
     "\n",
     "scraper  = RedditScraper()\n",
     "\n",
-    "# await scraper.get_posts_byprawn(mental_subreddits, limit=1000, mental=\"mental_\")\n",
-    "await scraper.get_posts_byprawn(normal_subreddits, limit=1000, mental=\"normal_\")\n",
+    "await scraper.get_posts_byprawn(mental_subreddits, limit=1000, mental=\"mental_\")\n",
+    "# await scraper.get_posts_byprawn(normal_subreddits, limit=1000, mental=\"normal_\")\n",
     "\n",
     "\n"
    ]
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3897e681",
    "metadata": {},
    "outputs": [],
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "021f2529",
    "metadata": {},
    "outputs": [],
@@ -1520,9 +1520,7 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "# df_normal = pd.read_csv(os.path.join(current_path, 'data', 'reddit_data', 'normal_reddit_posts.csv'))\n",
-    "# print(df_normal.shape)      \n"
+    "\n"
    ]
   },
   {
@@ -1535,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "6f3013d5",
    "metadata": {},
    "outputs": [],
@@ -1561,15 +1559,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9469facc",
+   "execution_count": 2,
+   "id": "f152a13e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 26011/26011 [54:01<00:00,  8.02it/s]  \n"
+     ]
+    }
+   ],
    "source": [
-    "import os \n",
+    "import os\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
-    "tqdm.pandas()\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "'''\n",
     "data_folder = os.path.join(current_path, 'data', 'beyondblue_data')\n",
@@ -1589,56 +1597,6 @@
     "\n",
     "\n",
     "\n",
-    "clean_operator = NLP_OPERATORS()\n",
-    "\n",
-    "# get the current path\n",
-    "current_path = os.getcwd()\n",
-    "output_folder = os.path.join(current_path, 'data', 'beyondblue_data', 'clean')\n",
-    "os.makedirs(output_folder, exist_ok=True)\n",
-    "\n",
-    "\n",
-    "\n",
-    "df_beyondblue = pd.read_csv(os.path.join(current_path, 'data', 'beyondblue_data', 'All_beyondblue_posts.csv'))\n",
-    "\n",
-    "\n",
-    "df_beyondblue[\"title_content_comments_category\"] = df_beyondblue['Post Title'].astype(str) + \" | \" + df_beyondblue['Post Content'].astype(str) + \" | \" + df_beyondblue['Comments'].astype(str)+ \" | \" + df_beyondblue['Post Category'].astype(str)\n",
-    "df_beyondblue[\"clean_title_content_comments_category\"] = df_beyondblue['title_content_comments_category'].copy().apply(\n",
-    "    lambda x: clean_operator.text_preprocessing(x, regex=True, remove_stop_word=True, lemmatisation=True, lower_case=True, return_tokens=False))\n",
-    "\n",
-    "\n",
-    "\n",
-    "# combine all the text in the column into a single string\n",
-    "clean_all_strings = \" \".join(df_beyondblue['clean_title_content_comments_category'].tolist())\n",
-    "token_clean_all_strings = clean_operator.text_preprocessing(clean_all_strings, return_tokens=True)\n",
-    "# save this into a text file\n",
-    "with open(os.path.join(output_folder, 'token_cleaned_beyondblue_all_text.txt'), 'w') as f:\n",
-    "    f.write(str(token_clean_all_strings))\n",
-    "\n",
-    "#save the df_beyondblue into a csv file\n",
-    "df_beyondblue.to_csv(os.path.join(output_folder, 'cleaned_beyondblue_all_text.csv'), index=False)\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "f152a13e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 26011/26011 [54:36<00:00,  7.94it/s]  \n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "from tqdm import tqdm\n",
     "\n",
     "# Register tqdm with pandas\n",
     "tqdm.pandas()\n",
@@ -1655,15 +1613,14 @@
     "df_beyondblue = pd.read_csv(os.path.join(current_path, 'data', 'beyondblue_data', 'All_beyondblue_posts.csv'))\n",
     "\n",
     "# Combine selected text columns\n",
-    "df_beyondblue[\"title_content_comments_category\"] = (\n",
+    "df_beyondblue[\"title_content_comments\"] = (\n",
     "    df_beyondblue['Post Title'].astype(str) + \" | \" +\n",
     "    df_beyondblue['Post Content'].astype(str) + \" | \" +\n",
-    "    df_beyondblue['Comments'].astype(str) + \" | \" +\n",
-    "    df_beyondblue['Post Category'].astype(str)\n",
+    "    df_beyondblue['Comments'].astype(str) + \" | \" \n",
     ")\n",
     "\n",
     "# Add progress bar to text preprocessing\n",
-    "df_beyondblue[\"clean_title_content_comments_category\"] = df_beyondblue[\"title_content_comments_category\"].progress_apply(\n",
+    "df_beyondblue[\"clean_title_content_comments\"] = df_beyondblue[\"title_content_comments\"].progress_apply(\n",
     "    lambda x: clean_operator.text_preprocessing(\n",
     "        x,\n",
     "        regex=True,\n",
@@ -1675,7 +1632,7 @@
     ")\n",
     "\n",
     "# Combine all cleaned text into one long string\n",
-    "clean_all_strings = \" \".join(df_beyondblue['clean_title_content_comments_category'].tolist())\n",
+    "clean_all_strings = \" \".join(df_beyondblue['clean_title_content_comments'].tolist())\n",
     "\n",
     "# Tokenize the full text\n",
     "token_clean_all_strings = clean_operator.text_preprocessing(clean_all_strings, return_tokens=True)\n",
@@ -1698,14 +1655,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ef310fd6",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
+    "\n",
     "# use bert tokenizer to tokenize the text \n",
-    "not_clean_all_strings = \" \".join(df_beyondblue['title_content_comments_category'].tolist())\n",
+    "not_clean_all_strings = \" \".join(df_beyondblue['title_content_comments'].tolist())\n",
     "bert_token_not_clean_all_strings = clean_operator.text_preprocessing(not_clean_all_strings,use_bert_tokenizer = True, return_tokens=True)\n",
     "\n",
     "# save it to a pickle file\n",
@@ -1727,7 +1685,18 @@
    "execution_count": null,
    "id": "578116b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n\\ntarget_file = os.path.join(current_dir, 'data', 'AUS_weather', 'AUS_bigcity_weather_data_cleaned.csv')\\ncleaned_weather_df = pd.read_csv(target_file)\\ncleaned_weather_df['Date'] = pd.to_datetime(cleaned_weather_df['Date'], errors='coerce')\\n\\n# drop the rows if the date is older than 2015\\ncleaned_weather_df = cleaned_weather_df[cleaned_weather_df['Date'] >= '2015-01-01'].reset_index(drop=True)\\n# Save the cleaned DataFrame to a new CSV file\\ncleaned_weather_df.to_csv(os.path.join(current_dir,'data', 'AUS_weather','AUS_bigcity_weather_data_cleaned_2015up.csv'), index=False)\\n\\n\\n\""
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import os\n",
@@ -1737,17 +1706,16 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "target_file = os.path.join(current_dir, 'data', 'reddit_data', 'clean', 'cleaned_mental_all_text.csv')\n",
     "cleaned_reddit_df = pd.read_csv(target_file)\n",
+    "cleaned_reddit_df['created_utc'] = pd.to_datetime(cleaned_reddit_df['created_utc'], errors='coerce')\n",
+    "# print(cleaned_reddit_df['created_utc'].max())  # the latest post date\n",
+    "# print(cleaned_reddit_df['created_utc'].min())  # the oldest post date\n",
     "\n",
-    "\n",
-    "\n",
+    "# drop the rows if the date is older than 2015\n",
+    "cleaned_reddit_df = cleaned_reddit_df[cleaned_reddit_df['created_utc'] >= '2015-01-01'].reset_index(drop=True)\n",
+    "# Save the cleaned DataFrame to a new CSV file\n",
+    "cleaned_reddit_df.to_csv(os.path.join(current_dir, 'data', 'reddit_data', 'clean', 'cleaned_mental_all_text_2015up.csv'), index=False)\n",
     "\n",
     "\n",
     "\n",
@@ -1756,8 +1724,14 @@
     "\n",
     "target_file = os.path.join(current_dir, 'data', 'beyondblue_data', 'clean', 'cleaned_beyondblue_all_text.csv')\n",
     "cleaned_beyondblue_df = pd.read_csv(target_file)\n",
+    "cleaned_beyondblue_df['Post Date'] = pd.to_datetime(cleaned_beyondblue_df['Post Date'], errors='coerce')\n",
+    "# print(cleaned_beyondblue_df['Post Date'].max()) # the latest post date\n",
+    "# print(cleaned_beyondblue_df['Post Date'].min()) # the oldest post date\n",
     "\n",
-    "\n",
+    "# drop the rows if the date is older than 2015\n",
+    "cleaned_beyondblue_df = cleaned_beyondblue_df[cleaned_beyondblue_df['Post Date'] >= '2015-01-01'].reset_index(drop=True)\n",
+    "# Save the cleaned DataFrame to a new CSV file\n",
+    "cleaned_beyondblue_df.to_csv(os.path.join(current_dir, 'data', 'beyondblue_data', 'clean', 'cleaned_beyondblue_all_text_2015up.csv'), index=False)\n",
     "\n",
     "\n",
     "\n",
@@ -1767,14 +1741,13 @@
     "\n",
     "target_file = os.path.join(current_dir, 'data', 'AUS_weather', 'AUS_bigcity_weather_data_cleaned.csv')\n",
     "cleaned_weather_df = pd.read_csv(target_file)\n",
-    "\n",
+    "cleaned_weather_df['Date'] = pd.to_datetime(cleaned_weather_df['Date'], errors='coerce')\n",
     "\n",
     "# drop the rows if the date is older than 2015\n",
-    "cleaned_weather_df['Date'] = pd.to_datetime(cleaned_weather_df['Date'], errors='coerce')\n",
     "cleaned_weather_df = cleaned_weather_df[cleaned_weather_df['Date'] >= '2015-01-01'].reset_index(drop=True)\n",
-    "\n",
     "# Save the cleaned DataFrame to a new CSV file\n",
     "cleaned_weather_df.to_csv(os.path.join(current_dir,'data', 'AUS_weather','AUS_bigcity_weather_data_cleaned_2015up.csv'), index=False)\n",
+    "\n",
     "\n",
     "\n"
    ]
@@ -1804,12 +1777,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "515b6075",
+   "metadata": {},
+   "source": [
+    "Reddit Network"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "15b75e8d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reddit DataFrame shape: (21181, 15)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "current_dir = os.getcwd()\n",
+    "reddit_df = pd.read_csv(os.path.join(current_dir, 'data', 'reddit_data', 'clean', 'cleaned_mental_all_text_2015up.csv'))\n",
+    "print(\"Reddit DataFrame shape:\", reddit_df.shape)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2d9fdf9",
+   "metadata": {},
+   "source": [
+    "Beyondblue Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "24cadbd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beyond Blue DataFrame shape: (4340, 11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "current_dir = os.getcwd()\n",
+    "beyondblue_df = pd.read_csv(os.path.join(current_dir, 'data', 'beyondblue_data', 'clean', 'cleaned_beyondblue_all_text_2015up.csv'))\n",
+    "print(\"Beyond Blue DataFrame shape:\", beyondblue_df.shape)"
+   ]
   },
   {
    "cell_type": "markdown",
