--- a/data_collection.ipynb
+++ b/data_collection.ipynb
@@ -2337,7 +2337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "3897e681",
    "metadata": {},
    "outputs": [
@@ -2364,17 +2364,35 @@
     "class NLP_OPERATORS:\n",
     "    def __init__(self):\n",
     "        self.stop_words = set(stopwords.words('english')) | {\n",
+    "            # URLs and web-specific terms\n",
     "            'https', 'http', 'www', 'helplinehttps', 'nan', 'deleted', 'rselfhelp', 'rbpd', 'rptsd',\n",
     "            'please click list', 'findahelplinecomiiasp', 'sharing story bot', 'please remember subreddit',\n",
-    "            'mods keep positive', 'frown', 'andry', 'pouting', 'lapping',\n",
-    "            'face smiley', 'happy face', 'upsidedown', 'upsidedown face', 'hi', 'anyone', 'etc',\n",
-    "            'nonenglish', 'beyondblue', 'im', 'dont', 'like', 'know', 'ive',\n",
-    "            'ts', 'wch', 'get', 'got', 'na', 'r', 'feel', 'time', 'life', 'want', 'years', 'really', 'tnk'\n",
+    "            'mods keep positive', 'beyondblue', 'nonenglish',\n",
+    "            \n",
+    "            # Emoji/emoticon related\n",
+    "            'frown', 'andry', 'pouting', 'lapping', 'face smiley', 'happy face', 'upsidedown', 'upsidedown face',\n",
+    "            \n",
+    "            # Common informal words\n",
+    "            'hi', 'anyone', 'etc', 'im', 'dont', 'like', 'know', 'ive', 'ts', 'wch', 'get', 'got', \n",
+    "            'na', 'r', 'feel', 'time', 'life', 'want', 'years', 'really', 'tnk',\n",
+    "            \n",
+    "            # Informal contractions\n",
+    "            'gonna', 'wanna', 'gotta', 'kinda', 'sorta', 'outta', 'dunno', 'lemme', 'gimme', \n",
+    "            'whatcha', 'betcha', 'gotcha', 'watcha', 'coulda', 'shoulda', 'woulda', 'hafta', \n",
+    "            'hasta', 'lotsa'\n",
     "        }\n",
     "        self.nlp = spacy.load('en_core_web_sm', disable=[\"parser\", \"ner\", \"textcat\"])\n",
     "        self.nlp.max_length = 5_000_000\n",
     "        self.bert_tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
     "        self.kaomoji_to_text = json.load(open('./kaomoji_to_text.json', 'r', encoding='utf-8'))\n",
+    "\n",
+    "\n",
+    "    def remove_contractions(self, text):\n",
+    "        \"\"\"Remove contractions with apostrophes\"\"\"\n",
+    "        # Only handle apostrophe contractions (don't, haven't, etc.)\n",
+    "        contraction_pattern = re.compile(r\"\\b\\w+'\\w+\\b\", flags=re.IGNORECASE)\n",
+    "        return contraction_pattern.sub('', text)\n",
+    "\n",
     "\n",
     "    def convert_emojis_emoticons(self, text):\n",
     "        # Replace kaomojis with their text equivalents\n",
@@ -2397,18 +2415,35 @@
     "        return text.strip().lower()\n",
     "\n",
     "    def basic_cleaning(self, text):\n",
-    "        # Combined regex pattern for efficiency\n",
+    "        # Convert emojis, emoticons, and kaomoji first to preserve meaningful text before aggressive cleaning\n",
+    "        text = self.convert_emojis_emoticons(text)\n",
+    "\n",
+    "        # Remove contractions after emoji conversion, as some emoticons might include apostrophes\n",
+    "        text = self.remove_contractions(text)\n",
+    "\n",
+    "        # Normalize whitespace and line breaks early to simplify subsequent regex\n",
+    "        text = text.replace('\\n', ' ').replace('\\r', ' ')\n",
+    "        text = re.sub(r'\\s+', ' ', text).strip()\n",
+    "\n",
+    "        \n",
     "        pattern = (\n",
-    "            r'https?://\\S+|www\\.\\S+|helplinehttps\\S*|\\S*https\\S*|' +\n",
-    "            r'r/[a-zA-Z0-9_]+|rptsd|rbpd|rselfhelp|please click list|findahelplinecomiiasp|' +\n",
-    "            r'sharing story bot|beyondblue|hi|anyone|etc|nonenglish|subreddit\\S*|\\breddit\\w*|' +\n",
-    "            r'<.*?>|\"|</?.*?>|[^a-zA-Z0-9 ]|\\d+'\n",
+    "            r'\\b(https?://\\S+|www\\.\\S+|helplinehttps\\S*|\\S*https?\\S*)\\b|'  # URLs\n",
+    "            r'\\br/[a-zA-Z0-9_]+\\b|\\brptsd|\\brbpd|\\brselfhelp|'  # Subreddits and specific subs\n",
+    "            r'please click list|findahelplinecomiiasp|sharing story bot|beyondblue|'  # Specific phrases\n",
+    "            r'hi|anyone|etc|nonenglish|subreddit\\S*|\\breddit\\w*|'  # Common informal/greeting words\n",
+    "            r'<[^>]*>|'  # HTML tags (improved)\n",
+    "            r'&\\w+;|'  # HTML entities\n",
+    "            r'[@#]\\S+|'  # Usernames and hashtags\n",
+    "            r'[\"“”‘’]|'  # Various quote types\n",
+    "            r'\\b\\d+\\b|'  # Digits (standalone numbers)\n",
+    "            r'[^a-zA-Z0-9\\s]'  # Non-alphanumeric except spaces (at end to catch remnants)\n",
     "        )\n",
     "        text = re.sub(pattern, '', text, flags=re.IGNORECASE)\n",
-    "        text = self.convert_emojis_emoticons(text)\n",
-    "        text = text.replace('\\n', ' ').replace('\\r', ' ')\n",
-    "        text = re.sub(r'\\s+', ' ', text)\n",
-    "        return text.strip()\n",
+    "\n",
+    "        # Final whitespace normalization after regex\n",
+    "        text = re.sub(r'\\s+', ' ', text).strip()\n",
+    "\n",
+    "        return text\n",
     "\n",
     "    def text_preprocessing(self, text, regex=False, remove_stop_word=False, lemmatisation=False, lower_case=False,\n",
     "                          return_tokens=True, use_bert_tokenizer=False):\n",
@@ -2449,7 +2484,11 @@
     "                tokens = [token.lemma_ for token in doc]\n",
     "            return tokens if return_tokens else \" \".join(tokens)\n",
     "\n",
-    "        return text"
+    "        return text\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
