--- a/data_chatbot.ipynb
+++ b/data_chatbot.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -76,12 +76,12 @@
       "\n",
       "RAM Info:\n",
       "Total RAM: 15.84 GB\n",
-      "Available RAM: 1.42 GB\n",
+      "Available RAM: 3.86 GB\n",
       "\n",
       "Disk Info (C: drive):\n",
       "Total Disk Space: 441.52 GB\n",
-      "Used Disk Space: 251.04 GB\n",
-      "Free Disk Space: 190.48 GB\n",
+      "Used Disk Space: 251.01 GB\n",
+      "Free Disk Space: 190.51 GB\n",
       "\n",
       "GPU Info:\n",
       "GPU Name: NVIDIA GeForce GTX 1650 Ti\n",
@@ -179,21 +179,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Note: Environment variable`HF_TOKEN` is set and is the current active token independently from the token you've just configured.\n"
+      "Note: Environment variable`HF_TOKEN` is set and is the current active token independently from the token you've just configured.\n",
+      "WARNING:huggingface_hub._login:Note: Environment variable`HF_TOKEN` is set and is the current active token independently from the token you've just configured.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device: cuda\n",
+      "Using device: cuda\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:accelerate.utils.modeling:We will use 90% of the memory on device 0 for storing the model, and 10% for the buffer to avoid OOM. You can set `max_memory` in to a higher value to use more memory (at your own risk).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Pre-trained model loaded successfully.\n"
      ]
     }
@@ -547,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +583,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1bdd9b007cbb4441b9b86a81d33b839e",
+       "model_id": "b1df7ae0275f4ea2a6bb4e20067c831a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -702,13 +716,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3faa6dacab14946a34290855e8c0175",
+       "model_id": "e8b10cfbcec047efbd94d5ed72fab3bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -718,13 +732,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The following generation flags are not valid and may be ignored: ['temperature', 'top_p']. Set `TRANSFORMERS_VERBOSITY=info` for more details.\n"
-     ]
     },
     {
      "name": "stdout",
